googleVis 0.5.10 [2015-08-26]
----------------------------

Bug fixes 

 o Ordered factors were ignored. 
   Thanks to Carsten Langer for reporting this issue.


googleVis 0.5.9 [2015-07-04]
----------------------------

Changes

  * Added note section on width and height to help file of 
    gvisIntensityMap. Thanks to Sarang Brahme for his comment.
   
  * Updated NAMESPACE file to comply with new R CMD checks in R-3.3.0   

googleVis 0.5.8 [2015-01-21]
----------------------------

Changes

* Internal changes to how the internal web server is called, to reflect
  changes in R 3.2.0

googleVis 0.5.7 [2014-12-20]
----------------------------

Changes

* Updated DESCRPITION file to comply with new CRAN policy

* Clarified setting parameters in help file.
  Thanks to Nick Salkowski for his suggestions.

googleVis 0.5.6 [2014-10-12]
----------------------------

Changes

* Rescaled the column "% of World Population" in sample data 
  set "Population" by a factor of 0.01

Bug Fixes

* gvisMotionChart: arguments xvar, yvar, sizevar and colorvar were not 
  always picked up correctly. 
  Thanks to Juuso Parkkinen for reporting this issue.

googleVis 0.5.5 [2014-08-15]
----------------------------

Changes

* Added example to gvisMerge help file.

Bug Fixes

* README.md when converted to (X)HTML using a current version of 
  pandoc showed minor problems when validated using W3C Markup 
  Validator.

* In some case when no xvar and yvar arguments where provided for 
  core charts the output wasn't sensible. This bug was introduced 
  with version 0.5.3. Thanks to stanstrup for reporting this issue.

googleVis 0.5.4 [2014-07-19]
----------------------------

Changes

* Tidying up of googleVis demo, vignette and README file


googleVis 0.5.3 [2014-06-28]
----------------------------

Changes

* Default chart width is set to 'automatic' instead of 500 pixels.
  
* Intervals for columns roles have to end with the suffix ".i",